Fixed horizontal overflow behavior for graph dir table

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -80,7 +80,7 @@ footer{
   position: relative;
   left: 0;
   bottom: 0;
-  width: 100%;
+  width: 90%;
   overflow:hidden;
 }
 
@@ -90,8 +90,6 @@ table{
   display:block;  
   width:100%;
   border-radius:6px;
-  margin-left: 15px;
-  margin-right: 15px;
 }
 
 .next {
